--- a/_includes/hexphotos.html
+++ b/_includes/hexphotos.html
@@ -1,62 +1,32 @@
-
 {% comment %}
-{% assign image_files = site.static_files 
-    | where_exp: "item", "item.path contains '/assets/gallery'" %} 
+Enhanced photo inclusion with proper section handling
 {% endcomment %}
 
-{% assign extra_image_files = site.static_files
-    | where_exp: "item", "item.path contains '/assets/small'" %}
-
-{% assign image_files = extra_image_files %}
-
-{% if include.save_image_names_js %}
-{{imgfile.name}}
-<script type="text/javascript">
-    let {{include.save_image_names_js}} = [
-        {% for imgfile in image_files %}'{{ imgfile.path | relative_url }}',{% endfor %} ];
-</script>
-{% endif %}
-
-
-
-{% assign i = 0 %}
-{% assign num_imgs = include.gridnums | default : "4,5" | split: "," %}
-{% unless include.nospacers %}  
-<div class="gallery-spacer"></div>
-{% endunless %}
-<div class="hex-container">
-    {% for row in num_imgs %}
-    <div class="hex-row">
-        {% for col in (1..row) %}
-        <div class="hex-wrapper">
-        <div class="hex-pad"></div>
-        <div class="hex">
-            <img src="{{image_files[i].path | relative_url }}" />
-            {% assign i = i | plus : 1 %}
-        </div>
-        </div>
-        {% endfor %}
-    </div>
-    {% endfor %}
-</div>
-{% unless include.nospacers %} 
-<div class="small-spacer"></div>
-{% endunless %}
-
 {% if include.section %}
-  {% assign photo_path = '/assets/photos/' | append: include.section | append: '/' %}
+  {% assign photo_path = '/assets/' | append: include.section | append: '/' %}
 {% else %}
-  {% assign photo_path = '/assets/photos/' %}
+  {% assign photo_path = '/assets/small/' %}
 {% endif %}
 
-<div class="hex-container">
-  {% for grid_num in include.gridnums %}
-    <div class="hex-wrapper">
-      <div class="hex">
-        <img src="{{ photo_path | append: 'photo' | append: forloop.index | append: '.jpg' | relative_url }}" 
-             alt="Photo {{ forloop.index }}">
+{% assign gridnums_array = include.gridnums | split: "," %}
+{% assign total_photos = 0 %}
+{% for num in gridnums_array %}
+  {% assign total_photos = total_photos | plus: num %}
+{% endfor %}
+
+<div class="hex-container modern-gallery-grid">
+  {% assign photo_index = 1 %}
+  {% for row_num in gridnums_array %}
+    {% for col in (1..row_num) %}
+      <div class="hex-wrapper gallery-item">
+        <div class="hex">
+          <img src="{{ photo_path | append: 'photo' | append: photo_index | append: '.jpg' | relative_url }}" 
+               alt="Photo {{ photo_index }}"
+               loading="lazy"
+               onerror="this.style.display='none';">
+        </div>
       </div>
-    </div>
+      {% assign photo_index = photo_index | plus: 1 %}
+    {% endfor %}
   {% endfor %}
 </div>
-
