--- a/docs/cssjs/main.css
+++ b/docs/cssjs/main.css
@@ -190,16 +190,15 @@ a {
 }
 
 span.shreya {
-    color: var(--vcolor)
-        /* color-mix(teal 80%, black); */
-    /* font-size: 100pt; */
-    /* margin-right:-5px; */
+    color: #E91E63; /* BRIGHT PINK for Shreya */
+    text-shadow: 2px 2px 4px rgba(233, 30, 99, 0.3);
+    font-weight: 600;
 }
 
 span.kaito {
-    /* color: rgb(224, 117, 172); */
-    /* margin-left: -5px; */
-    color: var(--ocolor);
+    color: #2196F3; /* BRIGHT BLUE for Kaito */
+    text-shadow: 2px 2px 4px rgba(33, 150, 243, 0.3);
+    font-weight: 600;
 }
 
 span.establishment {
