--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,17 +1,41 @@
 <navbar class="enhanced-navbar">
-<div class="nav-home">
-    <a href="{{ '/' | relative_url }}">
-        <span class="shreya">Shreya</span> <span class="oli">&</span> <span class="kaito">Kaito</span>
-    </a>
-</div>
-
-<div class="nav-tabs single-row">
-{% for tab in site.tabs %}
-{% unless tab.hide %}
-    <div class="nav-item tab {% if page.url == tab.url %}current-tab{% endif %}">
-        <a href="{{ tab.url | relative_url }}">{{tab.title_short}}</a>
+    <div class="nav-home">
+        <a href="{{ '/' | relative_url }}">
+            <span class="shreya">Shreya</span>
+            <span class="shreya"> & </span>
+            <span class="kaito">Kaito</span>
+        </a>
     </div>
-{% endunless %}
-{% endfor %}
-</div>
+    
+    <div class="nav-tabs single-row">
+        <div class="nav-item tab {% if page.url == '/tabs/events.html' %}current-tab{% endif %}">
+            <a href="{{ '/tabs/events.html' | relative_url }}">Events</a>
+        </div>
+        
+        <!-- MOVED: Culture (renamed from Ceremonies) comes after Events -->
+        <div class="nav-item tab {% if page.url == '/tabs/culture.html' %}current-tab{% endif %}">
+            <a href="{{ '/tabs/culture.html' | relative_url }}">Culture</a>
+        </div>
+        
+        <div class="nav-item tab {% if page.url == '/tabs/gallery.html' %}current-tab{% endif %}">
+            <a href="{{ '/tabs/gallery.html' | relative_url }}">Gallery</a>
+        </div>
+        
+        <!-- MOVED: Travel Info comes before Recommendations -->
+        <div class="nav-item tab {% if page.url == '/tabs/travel-info.html' %}current-tab{% endif %}">
+            <a href="{{ '/tabs/travel-info.html' | relative_url }}">Travel Info</a>
+        </div>
+        
+        <div class="nav-item tab {% if page.url == '/tabs/recos.html' %}current-tab{% endif %}">
+            <a href="{{ '/tabs/recos.html' | relative_url }}">Recos</a>
+        </div>
+        
+        <div class="nav-item tab {% if page.url == '/tabs/qa.html' %}current-tab{% endif %}">
+            <a href="{{ '/tabs/qa.html' | relative_url }}">Q&A</a>
+        </div>
+        
+        <div class="rsvp">
+            <a href="{{ '/tabs/rsvp.html' | relative_url }}">RSVP</a>
+        </div>
+    </div>
 </navbar>
